--- a/index.html
+++ b/index.html
@@ -15,14 +15,46 @@
     <title>Boostrap Starter Page</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/styles.css">
+    <!-- jQuery (Bootstrap JS plugins depend on it) -->
+    <script src="js/jquery-1.11.3.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/script.js"></script>
   </head>
-<body>
+  <body>
 
-  <h1>Hello Coursera!</h1>
 
-  <!-- jQuery (Bootstrap JS plugins depend on it) -->
-  <script src="js/jquery-1.11.3.min.js"></script>
-  <script src="js/bootstrap.min.js"></script>
-  <script src="js/script.js"></script>
-</body>
+<!--   <h1>Hello Coursera!</h1>
+ -->
+
+ <nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#">Food, LLC</a>
+    </div>
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="visible-xs">
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav">
+          <li class="active"><a href="#">Chicken <span class="sr-only">(current)</span></a></li>
+          <li><a href="#">Fish</a></li>
+          <li><a href="#">Goat</a></li>
+        </ul>
+      </div>
+    </div>
+ 
+   </div>
+   </nav>
+
+   <h1 class="text-center">Our Menu</h1>
+     
+   
+
+  </body>
 </html>
