--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
     <div class="visible-xs">
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
-          <li class="active"><a href="#">Chicken <span class="sr-only">(current)</span></a></li>
-          <li><a href="#">Fish</a></li>
-          <li><a href="#">Goat</a></li>
+          <li class="active text-center"><a href="#">Chicken <span class="sr-only">(current)</span></a></li>
+          <li class="text-center"><a href="#">Fish</a></li>
+          <li class="text-center"><a href="#">Goat</a></li>
         </ul>
       </div>
     </div>
